--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,11 +13,14 @@ Imports:
   modelr (>= 0.1.2),
   purrr (>= 0.2.5),
   readr (>= 1.1.1),
+  remotes (>= 1.1.1),
   robotstxt (>= 0.6.0),
   rvest (>= 0.3.2),
   stringr (>= 1.3.1),
+  styler (>= 1.0.2),
   tidyr (>= 0.8.1),
   tidyverse (>= 1.2.1),
+  usethis (>= 1.4.0),
   xaringan (>= 0.7)
 Remotes:
   rstudio/rmarkdown,
